syntax = "proto3";

import "model/model.proto";

package server;

option go_package = "github.com/NetSepio/sotreus/grpc/v1/server;server";

message Empty {}

message Config { bytes Config = 1; }

service ServerService {
  rpc GetServerInformation(Empty) returns (model.Response);
  rpc GetServerConfiguraion(Empty) returns (Config);
  rpc UpdateServer(model.Server) returns (model.Response);
}