syntax = "proto3";

package status;

option go_package = "github.com/NetSepio/sotreus/grpc/v1/status;status";

import "model/model.proto";

message Empty {}

service StatusService { rpc GetStatus(Empty) returns (model.Status); }